# pyri-sandbox

./: .gitignore  README.md  pyproject.toml  setup.py
config/: pyri_sandbox_default_info.yml
node/blockly_compile_node/: README.md  blockly_compile.js  blockly_compile_util.js  install_blockly_compiler.py  package-lock.json  package.json
node/pyri_blockly_code_demo/: .gitignore  README.md  build_pryi_blockly_json.py  code.js  index.html  package-lock.json  package.json  style.css
src/pyri/sandbox/: __main__.py  blockly_compile.js  blockly_compiler.py  compile_blockly.js  pyri_sandbox.py  restricting_transformer.py  robdef.py  sandbox_functions.py  service_node_launch.py  tech.pyri.sandbox.robdef  util.py
test/sandbox/: test_blockly_compiler.py
