[project]

name = "pyri-sandbox"
version = "0.3.0"
description = "PyRI Teach Pendant User Software Sandbox"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["pyodide", "pyri-project", "pyri-runtime-package", "robotics"]
authors = [
    {name = "John Wason", email = "wason@wasontech.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    'pyri-common',
    'appdirs',
    'RobotRaconteur>=1.2.0',
    'RobotRaconteurCompanion>=0.4.0',
    'RestrictedPython'   
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[project.urls]
homepage="http://pyri.tech"
repository="https://github.com/pyri-project/pyri-sandbox"

[project.scripts]
pyri-sandbox-service = "pyri.sandbox.__main__:main"

[project.entry-points."pyri.plugins.sandbox_functions"]
pyri-sandbox-functions = "pyri.sandbox.sandbox_functions:get_sandbox_functions_factory"

[project.entry-points."pyri.plugins.robdef"]
pyri-sandbox-robdef = "pyri.sandbox.robdef:get_robdef_factory"

[project.entry-points."pyri.plugins.service_node_launch"]
pyri-sandbox-launch = "pyri.sandbox.service_node_launch:get_service_node_launch_factory"

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'toml',
]

[tool.setuptools.package-data]
'pyri.sandbox' = ['*.robdef','*.js','*.yml']